@startuml

class "Artist" as A {
    +verified: boolean
}

class "CommissionRequest" as CR {
    +id: double
    +status: Status
    +created_at: LocalDateTime
    +description: String
    +artistCommentary: String
}

class "Direct Message" as DM {
    +id: double
    +content: String
    +created_at: LocalDateTime
    +is_read: boolean
}

class "User" as U {
    +id: double
    +username: String
    +hashed_password: String
    +email: String
}

class "Gallery" as G {
    +id: double
    +name: String
    +description: String
}

class "Artwork" as W {
    +id: Long
    +title: String
    +description: String
    +timeCreated: LocalLocalDateTime
    +imageUrl: String
    +price: double
}

' Relationships
A "1" -- "0..*" G : owns >
U ^-- A
U "0..*" -- "0..*" U : follows >
U "0..*" -- "1..*" A  : requestsCommission >
CR "1" -- "1" U : requested_by >
CR "1" -- "1" A : assigned_to >
DM "1" -- "1" U : sender >
DM "1" -- "1" U : recipient >
G "0..*" -- "0..*" W : contains >
A "1" -- "0..*" W : creates >
@enduml